// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remediations remove bulk delete empty list 1`] = `
{
  "errors": [
    {
      "code": "minItems.openapi.validation",
      "id": "",
      "status": 400,
      "title": "should NOT have fewer than 1 items (location: body, path: remediation_ids)",
    },
  ],
}
`;

exports[`remediations remove bulk delete missing body 1`] = `
{
  "errors": [
    {
      "code": "required.openapi.validation",
      "id": "",
      "status": 400,
      "title": "should have required property 'remediation_ids' (location: body, path: remediation_ids)",
    },
  ],
}
`;

exports[`remediations remove bulk delete too many IDs 1`] = `
{
  "errors": [
    {
      "code": "maxItems.openapi.validation",
      "id": "",
      "status": 400,
      "title": "should NOT have more than 100 items (location: body, path: remediation_ids)",
    },
  ],
}
`;
